# mobilebot-R2

./: .gitignore  CMakeLists.txt  README.md  package.xml  xacro.py
CAD/: mobilebot.f3d  mobilebot.step
launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch  gazebo.launch.py
meshes/: base_link.stl  leftw_back_1.stl  leftw_front_1.stl  rightw_back_1.stl  rightw_front_1.stl
scripts/: gz_relay.py  keyboard_control.py
urdf/: materials.xacro  mobilebot.gazebo  mobilebot.trans  mobilebot.urdf  mobilebot.xacro
